Tried fixing the layout, but no luck. Updated links

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
      <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
      <link rel="stylesheet" type="text/css" href="styles/normalize.css">
      <link rel="stylesheet" type="text/css" href="styles/main.css">
-     <link rel="stylesheet" type="text/css" href="styles/landing.css">
+     <link rel="stylesheet" type="text/css" href="styles/about.css">
   </head>
   <body class="about me">
       <nav class="navbar">
@@ -25,7 +25,7 @@
           <h1 class="title">Gulbahar <p>Okuyan-Waugh</h1>
       </section>
 
-      <section class="about-description-table"
+      <section class="about-description-table clearfix"
           <div class="about-container">
             <img src="images/photo.png" alt="gulbahar photo">
             <h2 class="about-description-text">Hi, my name is Gulbahar.
@@ -33,42 +33,44 @@
           </div>
       </section>
 
-      <section class="about-icons"
+      <section class="about-icons clearfix"
           <div class="icon-container">
-              <a href="linkedin.com/in/gulokuyan">
+              <a href="https://www.linkedin.com/in/gulokuyan">
                   <img src="images/.png"></a>
               <a href="images/.pdf">resume</a>
           </div>
       </section>
 
-      <section class="about-content">
-          <p class="about-content-text"><span>I am a UX designer with 8 years’ experience in
+      <section class="about-content clearfix">
+          <div class="about-content-text">
+            <p class="text">I am a UX designer with 8 years’ experience in
             strategy and project development. I work full-time at WOCCU, where I
             am designing and managing our company’s transition to SharePoint, develop
             content for web and print, and manage & design development finance projects
-            in emerging economies.</span>
-            <p><span>On the side, I am a freelance UX/UI designer and marketing consultant
-              to small businesses and start-ups.</span>
-            <p><span>I found myself in design after watching a TedX Talk by David Butler,
+            in emerging economies.
+            <p>On the side, I am a freelance UX/UI designer and marketing consultant
+              to small businesses and start-ups.
+            <p>I found myself in design after watching a TedX Talk by David Butler,
               Coca-Cola’s first and former global head of design. You can watch it
               <a href="">here</a>. Then reading his book, which you can find
               <a href="">here</a>. He applied design principles on business operations
               to create a new system that made the large company operate as a start-up,
               always prototyping and innovating, and in the process saveed them over
-              $500 million.</span>
-              <p><span>The potential of design - making things practical, usable, and
+              $500 million.
+              <p>The potential of design - making things practical, usable, and
                 beautiful - excited me.
-              <p><span>So I started with designing and writing projects in resource-poor
+              <p>So I started with designing and writing projects in resource-poor
                 countries. Little by little, I’ve increased my skills in design
                 software and Microsoft products. Now I also help small businesses
-                with strategy, marketing, and user experience.</span>
-              <p><span>I love to travel, getting to know people, and leaarning new things.
+                with strategy, marketing, and user experience.
+              <p>I love traveling, getting to know people, and learning new things.
                 Most recently, I was in rural Philippines interviewing women
-                entrepreneurs. And my next trip is Milan!</span>
-          </p>
+                entrepreneurs. And my next trip is Milan!
+            </p>
+          </div>
       </section>
 
-      <section class="moodboard">
+      <section class="moodboard clearfix">
           <img src="images/moodboard.png">
       </section>
 
