About and Home changes. added landing.css. Issues with responsiveness and layout - mainly css.

--- a/about.html
+++ b/about.html
@@ -2,48 +2,41 @@
 <html>
   <head>
      <title>About</title>
-     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
+     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Rozha+One">
+     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand">
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
      <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
      <link rel="stylesheet" type="text/css" href="styles/normalize.css">
      <link rel="stylesheet" type="text/css" href="styles/main.css">
      <link rel="stylesheet" type="text/css" href="styles/about.css">
+     <link rel="stylesheet" type="text/css" href="styles/landing.css">
+
   </head>
   <body class="about me">
       <nav class="navbar">
           <a href="index.html" class="logo">
-              <img src="images/logo.png" alt="gulbahar okuyan logo">
+              <img src="images/spring.png" alt="gulbahar okuyan logo">
           </a>
           <div class="links-container">
-                <a href="index.html" class="navbar-link">home</a>
+                <a href="index.html" class="navbar-link">portfolio</a>
                 <a href="about.html" class="navbar-link">about</a>
                 <a href="contact.html" class="navbar-link">contact</a>
-                <a href="portfolio.html" class="navbar-link">portfolio</a>
           </div>
       </nav>
 
-      <section class="about">
-          <h1 class="title">Gulbahar <p>Okuyan-Waugh</h1>
-      </section>
-
-      <section class="about-description-table clearfix"
-          <div class="about-container">
-            <img src="images/photo.png" alt="gulbahar photo">
-            <h2 class="about-description-text">Hi, my name is Gulbahar.
-              <p>You can call me Rose or G.</h2>
+      <section class="hero container">
+          <div class="hero-content">
+                <div class="hero-image column third">
+                    <img src="images/photo.png">
+                </div>
+                <h1 class="title column two-thirds">Gulbahar Okuyan-Waugh</h1>
           </div>
       </section>
 
-      <section class="about-icons clearfix"
-          <div class="icon-container">
-              <a href="https://www.linkedin.com/in/gulokuyan">
-                  <img src="images/.png"></a>
-              <a href="images/.pdf">resume</a>
-          </div>
-      </section>
-
-      <section class="about-content clearfix">
+      <section class="about-content">
           <div class="about-content-text">
-            <p class="text">I am a UX designer with 8 years’ experience in
+            <h2>you can call me rose or G</h2>
+            <p>I am a UX designer with 8 years’ experience in
             strategy and project development. I work full-time at WOCCU, where I
             am designing and managing our company’s transition to SharePoint, develop
             content for web and print, and manage & design development finance projects
@@ -65,33 +58,27 @@
                 with strategy, marketing, and user experience.
               <p>I love traveling, getting to know people, and learning new things.
                 Most recently, I was in rural Philippines interviewing women
-                entrepreneurs. And my next trip is Milan!
-            </p>
+                entrepreneurs. And my next trip is Milan!</p>
           </div>
       </section>
 
-      <section class="moodboard clearfix">
+      <section class="moodboard">
           <img src="images/moodboard.png">
       </section>
 
-  <footer>
-      <div class="container footer">
-          <div class="left-side-nav">
-              <a href="" class="footer-icon">
-                  <img src="images/.png" alt=github>
-              </a>
-              <a href="" class="footer-icon">
-                  <img src="images/.png" alt=linkedin>
-              </a>
-          </div>
-          <div class="center"
-              <a href="" class="footer-icon">
-                  <img src="images/.png" alt="phone">
-              </a>
-              <a href="contact.html" h3 class="connect">let's chat</h3></a>
-        </div>
-      </div>
-  </footer>
+      <footer class="footer-info">
+          <ul class="footer-contact-list">
+                <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
+                    <i class="fab fa-linkedin-in"></i> </a>
+                </li>
+                <li><a href="https://github.com/okleyla" alt="github">
+                    <i class="fab fa-github"></i> </a>
+                </li>
+                <li>
+          </ul>
+          <p class="right-side-footer">content and design. &copy 2018 Gulbahar Okuyan-Waugh
+          </p>
+      </footer>
   </body>
 
 </html>
