--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-     <title>Welcome!</title>
+     <title>UX Designer: Gulbahar Okuyan-Waugh</title>
+     <meta name="viewport" content="width=device-width, initial-scale=1">
      <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Rozha+One">
      <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand">
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
      <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
      <link rel="stylesheet" type="text/css" href="styles/normalize.css">
      <link rel="stylesheet" type="text/css" href="styles/main.css">
      <link rel="stylesheet" type="text/css" href="styles/landing.css">
+
   </head>
   <body class="landing">
       <nav class="navbar">
@@ -15,61 +18,76 @@
               <img src="images/spring.png" alt="gulbahar okuyan logo">
           </a>
           <div class="links-container">
-                <a href="index.html" class="navbar-link">home</a>
+                <a href="index.html" class="navbar-link">portfolio</a>
                 <a href="about.html" class="navbar-link">about</a>
                 <a href="contact.html" class="navbar-link">contact</a>
-                <a href="portfolio.html" class="navbar-link">portfolio</a>
           </div>
       </nav>
 
       <section class="hero-content">
-          <h1 class="title">Welcome!</h1>
-          <body class="hero-content">My name is Gulbahar Okuyan-Waugh.
-              <p>I’m a DC-based freelance designer, strategist, and researcher.
+          <h1 class="title">designer in dc</h1>
+          <body class="hero-content">My name is Gulbahar Okuyan-Waugh. I’m available for
+            consulting in UX design, user research, and marketing.
           </body>
       </section>
 
-      <section class="options container">
-          <div class="option-top-box">
-              <a href="">
-                  <img src="images/.png" alt="RF logo">
-                  <h4 class="option-name">ReFated Shoes</h4>
-                  <h2 class="option-title">Classics Redefined</h2>
-                  <p class="option description">Hand-dyeing shoes to create a unique
-                    twist, this entrepreneur needed help taking his company to the next
-                    level: brand identity & e-commerce site.</p>
-              </a>
-          </div>
-          <div class="option-bottom-box">
-              <a href="">
-                  <img src="images/.png" alt="coop chicken">
-                  <h4 class="option-name">COOP</h4>
-                  <h2 class="option-title">Organize Inspiration</h2>
-                  <p class="option description">Finally, a fun platform that actually
-                    makes it easy to share, store, and collaborate. This platform has
-                    a user friendly dashboard with a chat feature.</p>
-              </a>
-          </div>
+      <section class="main content">
+          <ul class="project-list">
+              <li class="project container">
+                  <div class="project-image column half">
+                      <img src="images/RFS.png">
+                  </div>
+                  <div class="project-text column half">
+                      <h3>ReFated Shoes</h3>
+                      <h2>Classics Redefined</h2>
+                      <p>Hand-dyeing shoes to create a unique
+                        twist, this entrepreneur needed help taking his company to the next
+                        level: brand identity & e-commerce site.</p>
+                      <a href="">see case study</a>
+              </li>
+              <li class="project container">
+                  <div class="project-image column half">
+                      <img src="images/.png">
+                  </div>
+                  <div class="project-text column half">
+                      <h3>COOP</h3>
+                      <h2>Organize Inspiration</h2>
+                      <p>Hand-dyeing shoes to create a unique
+                        twist, this entrepreneur needed help taking his company to the next
+                        level: brand identity & e-commerce site.</p>
+                      <a href="">see case study</a>
+              </li>
+          </ul>
       </section>
 
-  <footer>
-      <div class="container footer">
-          <div class="left-side-nav">
-              <a href="" class="footer-icon">
-                  <img src="images/.png" alt=github>
-              </a>
-              <a href="" class="footer-icon">
-                  <img src="images/.png" alt=linkedin>
-              </a>
-          </div>
-          <div class="center"
-              <a href="" class="footer-icon">
-                  <img src="images/.png" alt="phone">
-              </a>
-              <a href="contact.html" h3 class="connect">let's chat</h3></a>
-        </div>
-      </div>
-  </footer>
-  </body>
+      <section class="contact">
+          <h2 class="contact-text">see something you like? let's chat.</h2>
+          <ul class="contact-icons">
+              <li class="icon">
+                  <div class"icon-image">
+                      <a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
+                      <i class="fab fa-linkedin-in"></i></a>
+              </li>
+              <li class="icon">
+                  <div class"icon-image">
+                      <a href="mailto:mail.gokuyan@gmail.com" alt="email">
+                      <i class="fa fa-envelope"></i></a>
+              </li>
+          </ul>
+      </section>
 
+    <footer class="footer-info">
+        <ul class="footer-contact-list">
+              <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
+                  <i class="fab fa-linkedin-in"></i> </a>
+              </li>
+              <li><a href="https://github.com/okleyla" alt="github">
+                  <i class="fab fa-github"></i> </a>
+              </li>
+              <li>
+        </ul>
+        <p class="right-side-footer">content and design. &copy 2018 Gulbahar Okuyan-Waugh
+        </p>
+    </footer>
+  </body>
 </html>
