updated landing page, and main and landing stylesheets.

--- a/about.html
+++ b/about.html
@@ -2,8 +2,7 @@
 <html>
   <head>
      <title>About</title>
-     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Rozha+One">
-     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand">
+     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500|Rozha+One" rel="stylesheet">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
      <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
      <link rel="stylesheet" type="text/css" href="styles/normalize.css">
