--- a/index.html
+++ b/index.html
@@ -3,91 +3,93 @@
   <head>
      <title>UX Designer: Gulbahar Okuyan-Waugh</title>
      <meta name="viewport" content="width=device-width, initial-scale=1">
-     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Rozha+One">
-     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand">
+     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500|Rozha+One" rel="stylesheet">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
      <link rel="stylesheet" type="text/css" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
      <link rel="stylesheet" type="text/css" href="styles/normalize.css">
      <link rel="stylesheet" type="text/css" href="styles/main.css">
      <link rel="stylesheet" type="text/css" href="styles/landing.css">
-
   </head>
-  <body class="landing">
-      <nav class="navbar">
-          <a href="index.html" class="logo">
-              <img src="images/spring.png" alt="gulbahar okuyan logo">
-          </a>
-          <div class="links-container">
-                <a href="index.html" class="navbar-link">portfolio</a>
-                <a href="about.html" class="navbar-link">about</a>
-                <a href="contact.html" class="navbar-link">contact</a>
-          </div>
-      </nav>
 
-      <section class="hero-content">
-          <h1 class="title">designer in dc</h1>
-          <body class="hero-content">My name is Gulbahar Okuyan-Waugh. I’m available for
-            consulting in UX design, user research, and marketing.
-          </body>
-      </section>
-
-      <section class="main content">
-          <ul class="project-list">
-              <li class="project container">
-                  <div class="project-image column half">
-                      <img src="images/RFS.png">
+  <body>
+      <header>
+          <nav>
+              <a href="index.html" class="logo">
+                  <img src="images/spring.png" alt="gulbahar okuyan logo">
+              </a>
+              <ul class="nav-bar">
+                  <li><a href="index.html">portfolio</a></li>
+                  <li><a href="about.html">about</a></li>
+                  <li><a href="contact.html">contact</a></li>
+              </ul>
+              <ul class="rose-branch">
+                  <li><img src="images/rose-branch.png" alt="roses"></li>
+                  <li></li>
+                  <li></li>
+              </ul>
+          </nav>
+          <section class="intro">
+              <h1>nomadic designer</h1>
+              <p>My name is Gulbahar Okuyan-Waugh. I’m available
+                for consulting in UX design, user research, and marketing. I’m currently
+                living in DC, but will be living in Milan starting in August.</p>
+              <p class="learn-more">Jump to my <a href="index.html">portfolio</a> or learn more
+                  <a href="about.html">about me</a>.</p>
+          </section>
+      </header>
+      <main>
+          <section class="projects">
+              <div class="first">
+                  <a href="rfs.html"><div class="img">
+                        <img src="images/rfs.png" alt:"RFS">
+                            <a href="RFS.html"><div class="overlay">
+                                <h3 class="text">ReFated Shoes</h3>
+                                <p class="case-study">see case study</p>
+                            </div></a>
+                  </div></a>
+                  <div class="text">
+                        <a href="rfs.html"><h3>Starting from the sole</h3></a>
+                        <p>Hand-dyeing shoes to create a unique twist, this entrepreneur needed
+                          help taking his company to the next level: brand identity & e-commerce site.
                   </div>
-                  <div class="project-text column half">
-                      <h3>ReFated Shoes</h3>
-                      <h2>Classics Redefined</h2>
-                      <p>Hand-dyeing shoes to create a unique
-                        twist, this entrepreneur needed help taking his company to the next
-                        level: brand identity & e-commerce site.</p>
-                      <a href="">see case study</a>
-              </li>
-              <li class="project container">
-                  <div class="project-image column half">
-                      <img src="images/.png">
+              </div>
+              <div class="second">
+                  <div class="text">
+                        <a href="coop.html"><h3>A set of new wings</h3></a>
+                        <p>Finally, a fun platform that makes it easy to share, store, and collaborate
+                          with friends & colleagues. This platform has a user friendly dashboard with a chat
+                          feature. It also boasts integration with social networks.
                   </div>
-                  <div class="project-text column half">
-                      <h3>COOP</h3>
-                      <h2>Organize Inspiration</h2>
-                      <p>Hand-dyeing shoes to create a unique
-                        twist, this entrepreneur needed help taking his company to the next
-                        level: brand identity & e-commerce site.</p>
-                      <a href="">see case study</a>
-              </li>
-          </ul>
-      </section>
+                  <a href="coop.html"><div class="img">
+                        <img src="images/coop.png" alt:"COOP">
+                            <a href="RFS.html"><div class="overlay">
+                                <h3 class="text">COOP</h3>
+                                <p class="case-study">see case study</p>
+                            </div></a>
+                  </div></a>
+              </div>
+          </section>
 
-      <section class="contact">
-          <h2 class="contact-text">see something you like? let's chat.</h2>
-          <ul class="contact-icons">
-              <li class="icon">
-                  <div class"icon-image">
-                      <a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
-                      <i class="fab fa-linkedin-in"></i></a>
-              </li>
-              <li class="icon">
-                  <div class"icon-image">
-                      <a href="mailto:mail.gokuyan@gmail.com" alt="email">
-                      <i class="fa fa-envelope"></i></a>
-              </li>
-          </ul>
-      </section>
+          <section class="contact">
+              <h2>see something you like?</h2>
+              <button>let's chat</button>
+          </section>
+      </main>
 
-    <footer class="footer-info">
-        <ul class="footer-contact-list">
-              <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
-                  <i class="fab fa-linkedin-in"></i> </a>
-              </li>
-              <li><a href="https://github.com/okleyla" alt="github">
-                  <i class="fab fa-github"></i> </a>
-              </li>
-              <li>
-        </ul>
-        <p class="right-side-footer">content and design. &copy 2018 Gulbahar Okuyan-Waugh
-        </p>
-    </footer>
+      <footer class="footer-info">
+          <ul class="icons">
+                <li><a href="https://www.linkedin.com/in/gulokuyan/" alt="linkedin">
+                    <i class="fab fa-linkedin-in"></i> </a>
+                </li>
+                <li><a href="mailto:gokuyan@gmail.com" alt="email me">
+                    <i class="fas fa-envelope"></i></a>
+                </li>
+                <li><a href="https://github.com/okleyla" alt="github">
+                    <i class="fab fa-github"></i> </a>
+                </li>
+          </ul>
+          <p class="copyright">content and design. &copy 2018 Gulbahar Okuyan-Waugh
+          </p>
+      </footer>
   </body>
 </html>
