--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   </a>
               </ul>
           </nav>
-          <section class="intro">
+          <section class="hero">
               <h1>nomadic designer</h1>
               <p>My name is Gulbahar Okuyan-Waugh. I’m available
                 for consulting in UX design, user research, and marketing. I’m currently
