Working on case study

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
           <section class="contact">
               <h2>see something you like?</h2>
-              <button>let's chat</button>
+              <a href="contact.html"><button>let's chat</button></a>
           </section>
       </main>
 
