Updated About page to include skills and software with background and update mobile queries

--- a/about.html
+++ b/about.html
@@ -60,10 +60,31 @@
               <p>I love traveling, getting to know people, and learning new things.
                 Most recently, I was in rural Philippines interviewing women
                 entrepreneurs. And my next trip is Milan!</p>
+              <div class="buttons">
+                  <button>download resume</button>
+                  <button>let's chat</button>
+              </div>
+      </section>
+
+      <section class="capabilities">
+          <div class="caps">
+              <div class="skills">
+                  <h3>Skills</h3>
+                  <p>UX design, UI design, branding & identity, information architecture,
+                    wireframing, user research/testing, marketing & communications, strategy,
+                    business development</p>
+              </div>
+              <div class="software">
+                  <h3>Software</h3>
+                  <p>Sketch, Adobe CC (Illustrator, Photoshop, InDesign), Keynote, Microsoft
+                    Office Suite (Word, Excel, PowerPoint, Publisher), InVision, Balsamiq, Figma</p>
+              </div>
+          </div>
       </section>
 
       <section class="moodboard">
-          <img src="images/moodboard.png">
+            <h2>inspiration for my portfolio</h2>
+            <img src="images/moodboard.png">
       </section>
 
       <footer class="footer-info">
