Case study still in progress

--- a/rfs.html
+++ b/rfs.html
@@ -30,16 +30,18 @@
           </nav>
           <section class="hero">
               <h1>making men's shoes cool</h1>
-              <p>The entrepreneur (Darcy) behind ReFated Shoes, or RF, is an artist with
-                impeccable style. Bored of the basic blacks and browns, he hand-painted his
-                own shoes in vibrant hues, patina patterns, and however else inspiration took
-                hold of his paint brush. To his surprise, colleagues and passersby were offering
-                to buy the shoes off his feet. So, he decided to take his hobby online.
-              <p>After a successful stint on Etsy, the entrepreneur decided that it was time to
-                host his own site and define his brand. Enter: me. My role was to help him with
-                strategy, marketing, and design.</p>
-              <img src="images/rfs.png" class="full">
-              <a href="#"><button class="case-study-button">view prototype</button></a>
+              <img src="images/rfs.png">
+              <div class="hero-text">
+                  <p>The entrepreneur (Darcy) behind ReFated Shoes, or RF, is an artist with
+                    impeccable style. Bored of the basic blacks and browns, he hand-painted his
+                    own shoes in vibrant hues, patina patterns, and however else inspiration took
+                    hold of his paint brush. To his surprise, colleagues and passersby were offering
+                    to buy the shoes off his feet. So, he decided to take his hobby online.
+                  <p>After a successful stint on Etsy, the entrepreneur decided that it was time to
+                    host his own site and define his brand. Enter: me. My role was to help him with
+                    strategy, marketing, and design.</p>
+                </div>
+                <a href="#"><button class="case-study-button">view prototype</button></a>
           </section>
       </header>
       <main>
@@ -52,16 +54,14 @@
           <section class="competition">
               <h3>Who's Out There?</h3>
               <p>During the stakeholder interview, Darcy identified his competitors and inspiration:</p>
-              <div class="inspo-comp">
-                  <ul class="images">
-                      <li><img src="images/inspo1.png"></li>
-                      <li><img src="images/inspo2.png"></li>
-                      <li><img src="images/inspo3.png"></li>
-                      <li><img src="images/comp1.png"></li>
-                      <li><img src="images/comp2.png"></li>
-                      <li><img src="images/comp3.png"></li>
-                  </ul>
-              </div>
+              <ul class="inspo">
+                  <li><img src="images/inspo1.png" class="third"></li>
+                  <li><img src="images/inspo2.png" class="third"></li>
+                  <li><img src="images/inspo3.png" class="third"></li>
+                  <li><img src="images/comp1.png" class="third"></li>
+                  <li><img src="images/comp2.png" class="third"></li>
+                  <li><img src="images/comp3.png" class="third"></li>
+              </ul>
               <div class="box"><p></p></div>
               <p>Design pattern: the direct competitors use stone/slate textures and colors,
                 while the sources of inspiration rely on a black and white color scheme with
@@ -72,22 +72,22 @@
               <p>Considering the distinct nature of this business: of painting second-hand,
                 vintage, or out of season shoes, we needed a better understanding of how to
                 market to the target customer. We also needed to identify the target customer.</p>
-              <p>1st Survey: 33 respondents</p>
+              <p class="survey-results">1st Survey: 33 respondents
                   <ul class="survey">
                       <li><span>87.9%</span> mostly consider quality & style to purchase shoes</li>
                       <li><span>75.8%</span> would purchase shoes online</li>
                       <li><span>48%</span> would buy or consider buying refurbished shoes</li>
-                  </ul>
+                  </ul></p>
               <p>The seven out of eight (87.5%) respondents who would pay between $100-$300 for a
                 pair of shoes, who would also purchase shoes online and 50% would consider buying
                 refurbished shoes.
-              <p>2nd Survey: 133 respondents</p>
+              <p class="survey-results">2nd Survey: 133 respondents
                   <ul class="survey">
                       <li><span>54.3%</span> would consider buying hand-dyed shoes</li>
                       <li><span>25.4%</span> would buy hand-dyed shoes</li>
                       <li><span>"used"</span> most resembled "refurbished"</li>
-                  </ul>
-              <p>We had to replace the word "refurbished".
+                  </ul></p>
+              <p class="survey-results">We had to replace the word "refurbished".
               <p>I conducted another survey to test whether it was the term “refurbished” or the concept
                 behind RF that turned customers away. The word refurbished had to change, so we decided
                 on hand-painted. This term tested well during the website prototype.</p>
@@ -95,8 +95,8 @@
           <section class="users">
               <h3>Who Are They?</h3>
               <div class="user-boxes">
-                  <img src="images/VE.png" id="first">
-                  <img src="images/JM.png" id="second">
+                  <img src="images/VE.png" class="first">
+                  <img src="images/JM.png" class="second">
               </div>
           </section>
           <section class="info-arch">
@@ -106,55 +106,54 @@
                 whether additional pages were needed. We learned that the potential
                 customer wanted to learn more about the product, with multiple survey
                 respondents suggesting a section devoted to hand-painting techniques.</p>
-              <div class="full">
-                    <img src="images/refated-site-map.png">
-              </div>
+              <img src="images/refated-site-map.png" class="full">
               <h3>Flows</h3>
               <p>Based on our user personas, we decided to target the Vincent’s and
                 Marcus' through Instagram and Facebook, while the Jean's would learn
                 through word-of-mouth. Accordingly, I designed the below user flow to
                 reflect the journey the shopper will take once they click on that link.</p>
-              <div class="full"><img src="images/refated-user-flows.png">
-              </div>
+              <img src="images/refated-user-flows.png" class="full">
           </section>
           <section class="sketch">
               <h2>translating to web</h2>
               <h3>Sketching to Lo-Fi</h3>
-              <div class="more-full"><img src="images/prototypes.png">
+              <img src="images/prototypes.png" class="more-full">
               </div>
           </section>
           <section class="branding">
               <h2>branding</h2>
               <h3>Logo Formation</h3>
-              <div class="more-full"><img src="images/logo-formation.png">
+              <img src="images/logo-formation.png" class="more-full">
               </div>
               <h3>Logo Details</h3>
               <div class="final-logos">
                   <img src="images/logo-styles.png" class="first">
                   <img src="images/logo-details.png" class="second">
               </div>
-              <h3>Colors</h3>
-              <div class="color-samples">
-                  <ul class="images">
-                      <li><img src="images/001.png"></li>
-                      <li><img src="images/002.png"></li>
-                      <li><img src="images/003.png"></li>
-                      <li><img src="images/004.png"></li>
-                      <li><img src="images/005.png"></li>
-                  </ul>
+              <div class="colors">
+                  <h3>Colors</h3>
+                  <div class="color-samples">
+                      <ul class="images">
+                          <li><img src="images/001.png"></li>
+                          <li><img src="images/002.png"></li>
+                          <li><img src="images/003.png"></li>
+                          <li><img src="images/004.png"></li>
+                          <li><img src="images/005.png"></li>
+                      </ul>
+                  </div>
               </div>
               <div class="other-branding">
                   <div class="type">
                       <h3>Typography</h3>
-                      <img src="images/#" class="first">
+                      <img src="images/fonts.png" class="left-full">
                   </div>
                   <div class="button">
                       <h3>Buttons</h3>
-                      <img src="images/#" class="second">
+                      <img src="images/buttons.png" class="top-bottom">
                   </div>
                   <div class="mock">
                       <h3>Mockup</h3>
-                      <img src="images/#" class="second">
+                      <img src="images/mockup.png" class="top-bottom">
                   </div>
               </div>
           </section>
@@ -163,40 +162,42 @@
               <!-- insert video -->
 
               <h3>User Feedback</h3>
-              <div class="quotes">
-                  <p>"Nice layout, clean crisp lines. [I] like the color scheme."</p>
-                  <p>“Love the concept. Everyone loves to have originality in their style.”</p>
-              </div>
-              <p>We conducted multiple rounds of guerilla testing and online user testing
-                through Invision. Overall, we received positive feedback on the shoes and
-                the website. Survey respondents were intrigued by the concept and the
-                entrepreneur, while others were keen to order shoes from the prototype.
-                Negative comments were mostly directed towards the concept, rather than
-                the design. This was alleviated by providing additional information on the
-                dyeing process and on the specific shoes that are being sold.</p>
-
+                  <div class="user-feedback">
+                      <div class="quotes">
+                          <p class="first">"Nice layout, clean crisp lines. [I] like the color scheme."</p>
+                          <p class="second">“Love the concept. Everyone loves to have originality in their style.”</p>
+                      </div>
+                      <p>We conducted multiple rounds of guerilla testing and online user testing
+                        through Invision. Overall, we received positive feedback on the shoes and
+                        the website. Survey respondents were intrigued by the concept and the
+                        entrepreneur, while others were keen to order shoes from the prototype.
+                        Negative comments were mostly directed towards the concept, rather than
+                        the design. This was alleviated by providing additional information on the
+                        dyeing process and on the specific shoes that are being sold.</p>
+                  </div>
               <h3>Landing Page</h3>
-              <img src="images/#" class="full">
+              <img src="images/homepagev1.png" class="full">
               <h3>About, Contact, FAQ</h3>
               <ul class="prototype-images">
-                  <li><img src="images/#" class="third"></li>
-                  <li><img src="images/#" class="third"></li>
-                  <li><img src="images/#" class="third"></li>
+                  <li><img src="images/about refated.png" class="third"></li>
+                  <li><img src="images/contact.png" class="third"></li>
+                  <li><img src="images/faq.png" class="third"></li>
               </ul>
 
               <h3>Purchasing Flow</h3>
               <ul class="prototype-images">
-                  <li><img src="images/#" class="third"></li>
-                  <li><img src="images/#" class="third"></li>
-                  <li><img src="images/#" class="third"></li>
-                  <li><img src="images/#" class="third"></li>
+                  <li><img src="images/shoe-detail.png" class="third"></li>
+                  <li><img src="images/shopping-cart.png" class="third"></li>
+                  <li><img src="images/checkout-payment.png" class="third"></li>
+                  <li><img src="images/payment-confirmation.png" class="third"></li>
               </ul>
-
-              <h3>Membership</h3>
-              <p>Darcy’s goal is to include membership services once he builds a
-                larger following. So, we planned for the future and designed an
-                account page.</p>
-              <img src="images/#" class="full">
+              <div class="membership">
+                  <h3>Membership</h3>
+                  <p>Darcy’s goal is to include membership services once he builds a
+                    larger following. So, we planned for the future and designed an
+                    account page.</p>
+                  <img src="images/membership.png" class="full">
+              </div>
           </section>
 
           <section class="conclusion">
@@ -210,12 +211,12 @@
           </section>
           <section class="navigation">
               <div class="arrows">
-                  <img src="images/#" class="left">
-                  <img src="images/#" class="right">
+                  <a href="landing.html"><img src="images/previous.png" class="left"></a>
+                  <a href="coop.html"><img src="images/next.png" class="right"></a>
               </div>
               <div class="case-studies">
-                  <img src="images/#" class="first">
-                  <img src="images/#" class="second">
+                  <a href="rfs.html"><img src="images/rfs.png" class="first"></a>
+                  <a href="coop.html"><img src="images/coop.png" class="second"></a>
               </div>
           </section>
 
